--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -18,7 +18,7 @@
 
         a.custom-username {
             font-weight: normal;
-            color: gray;
+            color: grey;
         }
     </style>
 </head>
