--- a/src/main/resources/templates/admin/adminMenu.html
+++ b/src/main/resources/templates/admin/adminMenu.html
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col">
                 <div class="col-md-5 border w-auto rounded bg-body-secondary">
-                    <a href="#" class="link-dark p-3 me-2 fw-bold fs-5 text-decoration-none">
+                    <a th:href="@{/admin_manage_boards}" class="link-dark p-3 me-2 fw-bold fs-5 text-decoration-none">
                         게시글 관리
                     </a>
                 </div>
@@ -20,7 +20,7 @@
             <div class="col-sm-1 mx-2"></div>
             <div class="col">
                 <div class="col-sm-5 border w-auto rounded bg-body-secondary">
-                    <a href="#" class="link-dark p-3 me-2 fw-bold fs-5 text-decoration-none">
+                    <a th:href="@{/admin_manage_comments}" class="link-dark p-3 me-2 fw-bold fs-5 text-decoration-none">
                         댓글 관리
                     </a>
                 </div>
@@ -31,7 +31,7 @@
         <div class="row">
             <div class="col">
                 <div class="col-sm-5 border w-auto rounded bg-body-secondary">
-                    <a href="#" class="link-dark p-3 me-2 fw-bold fs-5 text-decoration-none">
+                    <a th:href="@{admin_manage_users}" class="link-dark p-3 me-2 fw-bold fs-5 text-decoration-none">
                         유저 관리
                     </a>
                 </div>
