--- a/src/main/resources/templates/admin/manageComments.html
+++ b/src/main/resources/templates/admin/manageComments.html
@@ -1,10 +1,321 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:layout="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>댓글 관리</title>
 </head>
 <body>
+<div th:insert="~{fragments :: header}"></div>
 <h1>댓글 관리</h1>
+<div class="container">
+    <div class="row justify-content-end row-cols-auto">
+        <div class="col pe-1 d-flex align-items-center">
+<!--            <input class="form-control" type="search" id="search_kw" th:value="${kw}"-->
+<!--                   placeholder="Search" aria-label="Search">-->
+            <input class="form-control" type="search" id="search_kw" th:value="${kw}"
+                   placeholder="Search" aria-label="Search">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="searchFieldDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-weight: bold;">
+                [[${#strings.equals(param.searchField, 'id') ? '댓글' :
+                  #strings.equals(param.searchField, 'boardId') ? '게시글' :
+                  #strings.equals(param.searchField, 'username') ? '유저이름' : '전체'}]]
+            </button>
+            <ul class="dropdown-menu dropdown-menu-end">
+                <li><h6 class="dropdown-header">검색 조건</h6></li>
+                <li><hr class="dropdown-divider"></li>
+                <li>
+                    <a class="dropdown-item"
+                       th:classappend="${param.searchField == null || param.searchField.toString() == 'ALL'} ? 'disabled'"
+                       href="javascript:void(0);" onclick="updateURLParam('searchField', 'ALL')">전체</a>
+                </li>
+                <li>
+                    <a class="dropdown-item"
+                       th:classappend="${param.searchField != null && param.searchField.toString() == 'id'} ? 'disabled'"
+                       href="javascript:void(0);" onclick="updateURLParam('searchField', 'id')">댓글</a>
+                </li>
+                <li>
+                    <a class="dropdown-item"
+                       th:classappend="${param.searchField != null && param.searchField.toString() == 'boardId'} ? 'disabled'"
+                       href="javascript:void(0);" onclick="updateURLParam('searchField', 'boardId')">게시글</a>
+                </li>
+                <li>
+                    <a class="dropdown-item"
+                       th:classappend="${param.searchField != null && param.searchField.toString() == 'username'} ? 'disabled'"
+                       href="javascript:void(0);" onclick="updateURLParam('searchField', 'username')">유저이름</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="col-auto px-0 d-flex align-items-center">
+            <button class="btn btn-outline-success" id="btn_search">Search</button>
+        </div>
+        <div class="col">
+            <!-- 오른쪽 항목: 드롭다운 메뉴 -->
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="sortDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-weight: bold;">
+                    [[${#strings.equals(param.sort, 'VOTE_COUNT') ? '추천순' : '최신순'}]]
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="sortDropdown" style="font-weight: bold;">
+                    <li><h6 class="dropdown-header">순서</h6></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li>
+                        <a class="dropdown-item"
+                           th:classappend="${param.sort == null || param.sort.toString() == 'LATEST'} ? 'disabled'"
+                           href="javascript:void(0);" onclick="updateURLParam('sort', 'LATEST')">최신순</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item"
+                           th:classappend="${param.sort != null && param.sort.toString() == 'VOTE_COUNT'} ? 'disabled'"
+                           href="javascript:void(0);" onclick="updateURLParam('sort', 'VOTE_COUNT')">추천순</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item"
+                           th:classappend="${param.sort != null && param.sort.toString() == 'REPLY_COUNT'} ? 'disabled'"
+                           href="javascript:void(0);" onclick="updateURLParam('sort', 'REPLY_COUNT')">답글 개수</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="col">
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="optionDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-weight: bold;">
+                    [[${#strings.equals(param.option, 'ADMIN') ? '관리자' :
+                    #strings.equals(param.option, 'USER') ? '사용자' : '전체'}]]
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="optionDropdown" style="font-weight: bold;">
+                    <li><h6 class="dropdown-header">권한</h6></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li >
+                        <a class="dropdown-item"
+                           th:classappend="${param.option == null || param.option.toString() == 'ALL'} ? 'disabled'"
+                           href="javascript:void(0);" onclick="updateURLParam('option', 'ALL')">전체</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item"
+                           th:classappend="${param.option != null && param.option.toString() == 'ADMIN'} ? 'disabled'"
+                           href="javascript:void(0);" onclick="updateURLParam('option', 'ADMIN')">관리자</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item"
+                           th:classappend="${param.option != null && param.option.toString() == 'USER'} ? 'disabled'"
+                           href="javascript:void(0);" onclick="updateURLParam('option', 'USER')">사용자</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="col">
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="categoryDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-weight: bold;">
+                    [[${#strings.equals(param.category, 'COMMUNITY') ? 'COMMUNITY' :
+                    #strings.equals(param.category, 'KNOWLEDGE') ? 'KNOWLEDGE' :
+                    #strings.equals(param.category, 'NOTICE') ? 'NOTICE' :
+                    #strings.equals(param.category, 'QUESTIONS') ? 'QUESTIONS' : 'ALL'}]]
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="categoryDropdown" style="font-weight: bold;">
+                    <li><h6 class="dropdown-header">카테고리</h6></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li>
+                        <a class="dropdown-item"
+                           th:classappend="${param.category == null || param.category.toString() == 'ALL'} ? 'disabled'"
+                           href="javascript:void(0);" onclick="updateURLParam('category', 'ALL')">ALL</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item"
+                           th:classappend="${param.category != null && param.category.toString() == 'COMMUNITY'} ? 'disabled'"
+                           href="javascript:void(0);" onclick="updateURLParam('category', 'COMMUNITY')">COMMUNITY</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item"
+                           th:classappend="${param.category != null && param.category.toString() == 'KNOWLEDGE'} ? 'disabled'"
+                           href="javascript:void(0);" onclick="updateURLParam('category', 'KNOWLEDGE')">KNOWLEDGE</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item"
+                           th:classappend="${param.category != null && param.category.toString() == 'NOTICE'} ? 'disabled'"
+                           href="javascript:void(0);" onclick="updateURLParam('category', 'NOTICE')">NOTICE</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item"
+                           th:classappend="${param.category != null && param.category.toString() == 'QUESTIONS'} ? 'disabled'"
+                           href="javascript:void(0);" onclick="updateURLParam('category', 'QUESTIONS')">QUESTIONS</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+<table class="table">
+    <thead>
+    <tr>
+        <th>#</th>
+        <th>게시글 번호(BID)</th>
+        <th>댓글 번호(CID)</th>
+        <th>내용</th>
+        <th>좋아요</th>
+        <th>카테고리</th>
+        <th>부모 댓글 여부</th>
+        <th>답글 갯수</th>
+        <th>게시자 이름</th>
+        <th>게시자 권한</th>
+        <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="comment, commentStat : ${comments}">
+        <th scope="row" th:text="${comments.getTotalElements() - commentStat.index - 10 * comments.getNumber()}"></th>
+        <td><a th:href="@{|/${comment.category.toString().toLowerCase()}/${comment.bid}}" th:text="${comment.bid}"
+               class="text-decoration-none"></a></td>
+        <td><a th:href="@{|/${comment.category.toString().toLowerCase()}/${comment.bid}}" th:text="${comment.cid}"
+               class="text-decoration-none"></a></td>
+        <td th:text="${comment.content}"></td>
+        <td th:text="${comment.likeCnt}"></td>
+        <td th:text="${comment.category}"></td>
+        <td th:text="${comment.parent == null} ? 'Y' : 'N'" ></td>
+        <td th:text="${comment.children.size()}"></td>
+        <td><a th:href="@{|/profile/${comment.uid}}" th:text="${comment.username}" class="text-decoration-none"></a></td>
+        <td th:text="${comment.userRole}"></td>
+        <!-- 댓글 수정 기능 추가는 고려중 -->
+<!--        <td>-->
+<!--            <a th:if="${comment.category.toString() != 'NOTICE'}"-->
+<!--               th:href="@{|/${comment.category.toString().toLowerCase()}/edit/${comment.bid}|}">-->
+<!--                <i class="bi bi-pencil-square"></i>-->
+<!--            </a>-->
+<!--            <a th:unless="${comment.category.toString() != 'NOTICE'}"-->
+<!--               th:href="@{|/notice/edit/${comment.bid}|}">-->
+<!--                <i class="bi bi-pencil-square"></i>-->
+<!--            </a>-->
+<!--        </td>-->
+        <td><form th:action="@{|/delete/${comment.cid}|}" method="post"
+                  onsubmit="return confirmDelete()">
+            <input type="hidden" name="id" th:value="${comment.cid}">
+            <button type="submit" class="border-0 bg-transparent"><i class="bi bi-trash"></i></button></form></td>
+    </tr>
+    </tbody>
+</table>
+<!-- 페이징 처리 시작 -->
+<div th:if="${!comments.isEmpty()}">
+    <ul class="pagination justify-content-center">
+        <li class="page-item" th:classappend="${!comments.hasPrevious()} ? 'disabled'">
+            <a class="page-link" href="javascript:void(0)" th:data-page="${1}"> <!--  th:href="@{|?page=${1}|}" -->
+                <span>처음</span>
+            </a>
+        </li>
+        <li class="page-item" th:classappend="${!comments.hasPrevious()} ? 'disabled'">
+            <a class="page-link" href="javascript:void(0)" th:data-page="${comments.number}">
+                <span>이전</span>
+            </a>
+        </li>
+        <!-- 4페이지 이상이면 1을 표시하고 5페이지 이상이면 그 옆에 ...을 표시함 -->
+        <li th:if="${comments.getNumber() >= 4}" class="page-item">           <!--  th:href="@{|?page=${1}|}" -->
+            <a th:text="${1}" class="page-link" href="javascript:void(0)" th:data-page="${1}"></a>
+        </li>
+        <li th:if="${comments.getNumber() >= 5}" class="page-item disabled">
+            <a class="page-link" tabindex="-1" aria-disabled="true">...</a>
+        </li>
+        <!-- 1부터 번호 생성, page에 값 넣음 -->
+        <!-- 현재 페이지 번호(paging.number)를 기준으로 앞 뒤로 2페이지와 4페이지 범위 내의 번호만 표시
+            예를 들면 현재 페이지가 5라면 3,4,5,6,7,8,9 가 표시 됨 -->
+        <!-- 그리고 현재 페이지(paging.number)가 page - 1과 같다면 클릭 못하게 함 -->
+        <li th:each="page: ${#numbers.sequence(1, comments.totalPages)}"
+            th:if="${page >= comments.number - 2 and page <= comments.number + 4}"
+            th:classappend="${page - 1 == comments.number} ? 'disabled'" class="page-item"> <!--  th:href="@{|?page=${page}|} -->
+            <a th:text="${page}" class="page-link" href="javascript:void(0)" th:data-page="${page}"></a>
+        </li>
+        <!-- 현재 페이지하고 끝 페이지의 간격이 5페이지 이상 있을 경우 마지막 페이지로의 링크를 표시하고
+            6페이지 이상 있을 경우 그 옆에 왼쪽에 ...을 붙임 -->
+        <li th:if="${comments.totalPages - comments.getNumber() >= 6}" class="page-item disabled">
+            <a class="page-link" tabindex="-1" aria-disabled="true">...</a>
+        </li>
+        <li th:if="${comments.totalPages - comments.getNumber() >= 5}" class="page-item">   <!--  th:href="@{|?page=${paging.totalPages}|} -->
+            <a th:text="${comments.totalPages}" class="page-link" href="javascript:void(0)" th:data-page="${comments.totalPages}"></a>
+        </li>
+        <li class="page-item" th:classappend="${!comments.hasNext()} ? 'disabled'">   <!--  th:href="@{|?page=${paging.number + 2}|} -->
+            <a class="page-link" href="javascript:void(0)" th:data-page="${comments.number + 2}">
+                <span>다음</span>
+            </a>
+        </li>
+        <li class="page-item" th:classappend="${!comments.hasNext()} ? 'disabled'">   <!--  th:href="@{|?page=${paging.totalPages}|} -->
+            <a class="page-link" href="javascript:void(0)" th:data-page="${comments.totalPages}">
+                <span>마지막</span>
+            </a>
+        </li>
+    </ul>
+</div>
+<!-- 페이징 처리 끝 -->
+<!-- 페이지 링크 누르면 페이지에 맞는 게시글 데이터 받아옴 -->
+<form th:action="@{/admin_manage_comments}" method="get" id="searchForm">
+    <input type="hidden" id="kw" name="kw" th:value="${kw}">
+    <input type="hidden" id="page" name="page" th:value="${comments.number}">
+    <input type="hidden" id="sort" name="sort" th:value="${param.sort}" th:if="${param.sort != null}">
+    <input type="hidden" id="category" name="category" th:value="${param.category}" th:if="${param.sort != null}">
+    <input type="hidden" id="searchField" name="searchField" th:value="${param.searchField}" th:if="${param.searchField != null}">
+    <input type="hidden" id="option" name="option" th:value="${param.option}" th:if="${param.option != null}">
+</form>
+
+<div th:insert="~{fragments :: footer}"></div>
+<div th:insert="~{fragments :: linkJS}"></div>
+<div th:insert="~{fragments :: linkCSS}"></div>
+<script layout:fragment="script" type='text/javascript' th:inline="javascript">
+    function updateParamsAndSubmit(page) {
+        let url = new URL(window.location.href);
+
+        let kwValue = document.getElementById('search_kw').value;
+        url.searchParams.set('kw', kwValue);
+        document.getElementById('kw').value = kwValue;
+
+        url.searchParams.set('page', page);
+        document.getElementById('page').value = page;
+
+        let sortValue = url.searchParams.get('sort');
+        if (sortValue !== null) {
+            document.getElementById('sort').value = sortValue;
+        }
+
+        let categoryValue = url.searchParams.get('category');
+        if (categoryValue !== null) {
+            document.getElementById('category').value = categoryValue;
+        }
+
+        let searchFieldValue = url.searchParams.get('searchField');
+        if (searchFieldValue !== null) {
+            document.getElementById('searchField').value = searchFieldValue;
+        }
+
+        let optionValue = url.searchParams.get('option');
+        if (optionValue !== null) {
+            document.getElementById('option').value = optionValue;
+        }
+
+        let form = document.getElementById('searchForm');
+        form.action = url.toString();
+        form.submit();
+    }
+
+    Array.from(document.getElementsByClassName("page-link")).forEach(function(element) {
+        element.addEventListener('click', function() {
+            updateParamsAndSubmit(this.dataset.page);
+        });
+    });
+
+    document.getElementById("btn_search").addEventListener('click', function() {
+        updateParamsAndSubmit(1);  // 검색버튼을 클릭할 경우 1페이지부터 조회한다.
+    });
+
+
+
+    function updateURLParam(paramName, newValue) {
+        let currentURL = window.location.href;
+        let url = new URL(currentURL);
+
+        // 쿼리 파라미터 업데이트 (이미 존재하면 값을 바꾸고, 없으면 추가)
+        url.searchParams.set(paramName, newValue);
+        url.searchParams.set('page', '1');
+        // 변경된 URL로 리디렉션
+        window.location.href = url.toString();
+    }
+
+    function confirmDelete() {
+        return window.confirm("삭제하면 복구할 수 없습니다. 정말로 삭제하시겠습니까?");
+    }
+</script>
 </body>
 </html>
