--- a/src/main/resources/templates/board/replyFragment.html
+++ b/src/main/resources/templates/board/replyFragment.html
@@ -1,97 +1,103 @@
 <li th:fragment="replyListItem" th:each="reply, replyStat : ${comment.children}" class="reply-item mb-3 ms-4">
-    <div class="d-flex align-items-center">
-        <div class="rounded-circle me-3" style="width: 65px; height: 65px;">
-            <!-- Comment author's profile image goes here -->
-            <img th:src="${reply.getProfileImgDTOInComment().getPath()}" alt="Profile Image" class="img-fluid rounded-circle">
-        </div>
-        <div class="flex-grow-1">
-            <div class="d-flex justify-content-between align-items-center">
-                <div class="d-flex flex-column justify-content-center">
-                    <!-- Comment author's name and comment content -->
-                    <strong th:text="${reply.getUsersDTOInComment().getUsername()}">Author Name</strong>
-                    <p class="fw-normal user-select-none mb-0" style="font-size : 0.75rem; font-weight: 200!important;" th:text="${dateFormatter.formatRegDate(reply.regDate)}">며칠 전인지 나타내는 부분</p>
-                </div>
-                <!-- 로그인 안했을 때 -->
-                <div sec:authorize="isAnonymous()" class="d-flex">
-                    <div class="btn-group">
-                        <!-- 비추 버튼 -->
-                        <button class="btn btn-sm btn-outline-secondary" style="font-size: 0.75rem;" onclick="redirectLogin()">
-                            <i class="bi bi-chevron-down"></i>
-                        </button>
-                        <!-- 현재 추천 카운트 -->
-                        <button th:text="${reply.likeCnt}" class="likeCnt btn btn-sm btn-outline-secondary disabled"
-                                style="font-size: 0.75rem;"></button>
-                        <!-- 추천 버튼 -->
-                        <button class="btn btn-sm btn-outline-secondary" style="font-size: 0.75rem;" onclick="redirectLogin()">
-                            <i class="bi bi-chevron-up"></i>
-                        </button>
+    <div th:if="${reply.isDeleted == true}" class="my-2">
+        <span class="text-body-secondary">삭제된 답글입니다.</span>
+        <hr th:unless="${replyStat.last}" class="my-3"/>
+    </div>
+    <div th:if="${reply.isDeleted == false}">
+        <div class="d-flex align-items-center">
+            <div class="rounded-circle me-3" style="width: 65px; height: 65px;">
+                <!-- Comment author's profile image goes here -->
+                <img th:src="${reply.getProfileImgDTOInComment().getPath()}" alt="Profile Image" class="img-fluid rounded-circle">
+            </div>
+            <div class="flex-grow-1">
+                <div class="d-flex justify-content-between align-items-center">
+                    <div class="d-flex flex-column justify-content-center">
+                        <!-- Comment author's name and comment content -->
+                        <strong th:text="${reply.getUsersDTOInComment().getUsername()}">Author Name</strong>
+                        <p class="fw-normal user-select-none mb-0" style="font-size : 0.75rem; font-weight: 200!important;" th:text="${dateFormatter.formatRegDate(reply.regDate)}">며칠 전인지 나타내는 부분</p>
                     </div>
-                </div>
-                <div sec:authorize="isAuthenticated()" class="d-flex">
-                    <div class="btn-group">
-                        <form th:action="@{/dislike/comment}" method="post" th:object="${commentLikeDTO}">
-                            <input type="hidden" name="cid" th:value="${reply.getCid()}"/>
-                            <input type="hidden" name="bid" th:value="${board.getBid()}"/>
-                            <input type="hidden" name="page" th:value="${replyStat.index / 10 + 1}"/>
-                            <input type="hidden" name="category" th:value="${board.getCategory()}"/>
-                            <!-- TODO : 게시글 추천도 이런방식으로 해도 될듯 -->
-                            <button
-                                    th:class="${reply.likeStatus == 'DISLIKE'} ? 'commentDisLikeBtn btn btn-sm btn-outline-danger' :
-                                                    'btn btn-sm btn-outline-secondary'"
-                                    style="font-size: 0.75rem;"
-                                    th:disabled="${reply.likeStatus == 'LIKE'}">
-                                <!-- Add your Like icon here -->
-                                <i class="bi bi-chevron-down" th:style="${reply.likeStatus == 'DISLIKE'} ? 'color: tomato;' : ''"></i>
+                    <!-- 로그인 안했을 때 -->
+                    <div sec:authorize="isAnonymous()" class="d-flex">
+                        <div class="btn-group">
+                            <!-- 비추 버튼 -->
+                            <button class="btn btn-sm btn-outline-secondary" style="font-size: 0.75rem;" onclick="redirectLogin()">
+                                <i class="bi bi-chevron-down"></i>
                             </button>
-                        </form>
-                        <!-- Dislike button -->
-                        <!-- Current number of likes -->
-                        <button th:text="${reply.likeCnt}" class="likeCnt btn btn-sm btn-outline-secondary disabled" style="font-size: 0.75rem;"></button>
-                        <!-- Like button -->
-                        <form th:action="@{/like/comment}" method="post" th:object="${commentLikeDTO}">
-                            <input type="hidden" name="cid" th:value="${reply.getCid()}"/>
-                            <input type="hidden" name="bid" th:value="${board.getBid()}"/>
-                            <input type="hidden" name="page" th:value="${replyStat.index / 10 + 1}"/>
-                            <input type="hidden" name="category" th:value="${board.getCategory()}"/>
-                            <button
-                                    th:class="${reply.likeStatus == 'LIKE'} ? 'commentLikeBtn btn btn-sm btn-outline-primary' :
-                                                    'btn btn-sm btn-outline-secondary'"
-                                    style="font-size: 0.75rem;"
-                                    th:disabled="${reply.likeStatus == 'DISLIKE'}">
-                                <!-- Add your Dislike icon here -->
-                                <i class="bi bi-chevron-up" th:style="${reply.likeStatus == 'LIKE'} ? 'color: dodgerblue;' : ''"></i>
+                            <!-- 현재 추천 카운트 -->
+                            <button th:text="${reply.likeCnt}" class="likeCnt btn btn-sm btn-outline-secondary disabled"
+                                    style="font-size: 0.75rem;"></button>
+                            <!-- 추천 버튼 -->
+                            <button class="btn btn-sm btn-outline-secondary" style="font-size: 0.75rem;" onclick="redirectLogin()">
+                                <i class="bi bi-chevron-up"></i>
                             </button>
-                        </form>
+                        </div>
                     </div>
-                    <div th:id="'editDeleteBtn-' + ${reply.cid}" class="btn-group ms-2" th:if="${comment.getUsersDTOInComment().getEmail()} == ${#authentication.name}">
-                        <button th:id="'editBtn-' + ${reply.cid}" class="commentEdit btn btn-outline-primary px-2" th:onclick="'commentEditToggle(\'' + ${reply.cid} + '\')'">
-                            <i class="bi bi-pencil"></i>
-                        </button>
-                        <form id="commentDelete"
-                              th:action="@{/delete/comment}" method="post" th:object="${commentLikeDTO}" onclick="commentDeleteConfirm(event, this)">
-                            <input type="hidden" name="cid" th:value="${reply.getCid()}">
-                            <input type="hidden" name="bid" th:value="${board.getBid()}">
-                            <input type="hidden" name="page" th:value="${replyStat.index / 10 + 1}">
-                            <input type="hidden" name="category" th:value="${board.getCategory()}"/>
-                            <button class="commentTrash btn btn-outline-danger px-2">
-                                <i class="bi bi-trash"></i>
+                    <div sec:authorize="isAuthenticated()" class="d-flex">
+                        <div class="btn-group">
+                            <form th:action="@{/dislike/comment}" method="post" th:object="${commentLikeDTO}">
+                                <input type="hidden" name="cid" th:value="${reply.getCid()}"/>
+                                <input type="hidden" name="bid" th:value="${board.getBid()}"/>
+                                <input type="hidden" name="page" th:value="${replyStat.index / 10 + 1}"/>
+                                <input type="hidden" name="category" th:value="${board.getCategory()}"/>
+                                <!-- TODO : 게시글 추천도 이런방식으로 해도 될듯 -->
+                                <button
+                                        th:class="${reply.likeStatus == 'DISLIKE'} ? 'commentDisLikeBtn btn btn-sm btn-outline-danger' :
+                                                        'btn btn-sm btn-outline-secondary'"
+                                        style="font-size: 0.75rem;"
+                                        th:disabled="${reply.likeStatus == 'LIKE'}">
+                                    <!-- Add your Like icon here -->
+                                    <i class="bi bi-chevron-down" th:style="${reply.likeStatus == 'DISLIKE'} ? 'color: tomato;' : ''"></i>
+                                </button>
+                            </form>
+                            <!-- Dislike button -->
+                            <!-- Current number of likes -->
+                            <button th:text="${reply.likeCnt}" class="likeCnt btn btn-sm btn-outline-secondary disabled" style="font-size: 0.75rem;"></button>
+                            <!-- Like button -->
+                            <form th:action="@{/like/comment}" method="post" th:object="${commentLikeDTO}">
+                                <input type="hidden" name="cid" th:value="${reply.getCid()}"/>
+                                <input type="hidden" name="bid" th:value="${board.getBid()}"/>
+                                <input type="hidden" name="page" th:value="${replyStat.index / 10 + 1}"/>
+                                <input type="hidden" name="category" th:value="${board.getCategory()}"/>
+                                <button
+                                        th:class="${reply.likeStatus == 'LIKE'} ? 'commentLikeBtn btn btn-sm btn-outline-primary' :
+                                                        'btn btn-sm btn-outline-secondary'"
+                                        style="font-size: 0.75rem;"
+                                        th:disabled="${reply.likeStatus == 'DISLIKE'}">
+                                    <!-- Add your Dislike icon here -->
+                                    <i class="bi bi-chevron-up" th:style="${reply.likeStatus == 'LIKE'} ? 'color: dodgerblue;' : ''"></i>
+                                </button>
+                            </form>
+                        </div>
+                        <div th:id="'editDeleteBtn-' + ${reply.cid}" class="btn-group ms-2" th:if="${comment.getUsersDTOInComment().getEmail()} == ${#authentication.name}">
+                            <button th:id="'editBtn-' + ${reply.cid}" class="commentEdit btn btn-outline-primary px-2" th:onclick="'commentEditToggle(\'' + ${reply.cid} + '\')'">
+                                <i class="bi bi-pencil"></i>
                             </button>
-                        </form>
+                            <form id="commentDelete"
+                                  th:action="@{/delete/comment}" method="post" th:object="${commentLikeDTO}" onclick="commentDeleteConfirm(event, this)">
+                                <input type="hidden" name="cid" th:value="${reply.getCid()}">
+                                <input type="hidden" name="bid" th:value="${board.getBid()}">
+                                <input type="hidden" name="page" th:value="${replyStat.index / 10 + 1}">
+                                <input type="hidden" name="category" th:value="${board.getCategory()}"/>
+                                <button class="commentTrash btn btn-outline-danger px-2">
+                                    <i class="bi bi-trash"></i>
+                                </button>
+                            </form>
+                        </div>
                     </div>
-                </div>
 
+                </div>
             </div>
         </div>
+        <p th:id="'commentContent-' + ${reply.cid}" class="commentContent" th:text="${reply.content}">Comment content goes here...</p>
+        <!-- 댓글 편집 영역 (초기에는 숨겨져 있음) -->
+        <form th:id="'editForm-' + ${reply.cid}" class="commentEditForm my-2" action="/edit/comment" method="post" style="display:none;">
+            <textarea th:id="'editArea-' + ${reply.cid}" name="content" class="commentEditArea form-control my-2" oninput="adjustHeight(this)"></textarea>
+            <input type="hidden" name="cid" th:value="${reply.getCid()}">
+            <input type="hidden" name="bid" th:value="${board.getBid()}">
+            <input type="hidden" name="page" th:value="${replyStat.index / 10 + 1}">
+            <input type="hidden" name="category" th:value="${board.getCategory().toLowerCase()}"/>
+            <button class="cancelBtn btn btn-outline-danger" th:onclick="'cancelCommentEdit(event, \'' + ${reply.cid} + '\')'">취소</button>
+            <button type="submit" th:id="'saveBtn-' + ${comment.cid}" class="saveEdit btn btn-outline-success px-2" >수정</button>
+        </form>
     </div>
-    <p th:id="'commentContent-' + ${reply.cid}" class="commentContent" th:text="${reply.content}">Comment content goes here...</p>
-    <!-- 댓글 편집 영역 (초기에는 숨겨져 있음) -->
-    <form th:id="'editForm-' + ${reply.cid}" class="commentEditForm my-2" action="/edit/comment" method="post" style="display:none;">
-        <textarea th:id="'editArea-' + ${reply.cid}" name="content" class="commentEditArea form-control my-2" oninput="adjustHeight(this)"></textarea>
-        <input type="hidden" name="cid" th:value="${reply.getCid()}">
-        <input type="hidden" name="bid" th:value="${board.getBid()}">
-        <input type="hidden" name="page" th:value="${replyStat.index / 10 + 1}">
-        <input type="hidden" name="category" th:value="${board.getCategory().toLowerCase()}"/>
-        <button class="cancelBtn btn btn-outline-danger" th:onclick="'cancelCommentEdit(event, \'' + ${reply.cid} + '\')'">취소</button>
-        <button type="submit" th:id="'saveBtn-' + ${comment.cid}" class="saveEdit btn btn-outline-success px-2" >수정</button>
-    </form>
 </li>
