유저 관리 기능 및 html 작성, 다른 유저 프로필 사진이 자신의 프로필 사진으로 보이는 문제 발견 및 수정

--- a/src/main/resources/templates/admin/manageComments.html
+++ b/src/main/resources/templates/admin/manageComments.html
@@ -294,7 +294,7 @@
     <input type="hidden" id="kw" name="kw" th:value="${kw}">
     <input type="hidden" id="page" name="page" th:value="${comments.number}">
     <input type="hidden" id="sort" name="sort" th:value="${param.sort}" th:if="${param.sort != null}">
-    <input type="hidden" id="category" name="category" th:value="${param.category}" th:if="${param.sort != null}">
+    <input type="hidden" id="category" name="category" th:value="${param.category}" th:if="${param.catecory != null}">
     <input type="hidden" id="searchField" name="searchField" th:value="${param.searchField}" th:if="${param.searchField != null}">
     <input type="hidden" id="option" name="option" th:value="${param.option}" th:if="${param.option != null}">
     <input type="hidden" id="option2" name="option2" th:value="${param.option2}" th:if="${param.option2 != null}">
