--- a/src/main/resources/templates/profile/profileMyComment.html
+++ b/src/main/resources/templates/profile/profileMyComment.html
@@ -35,14 +35,14 @@
 
             <div class="target-div" th:if="${profileOwnerUid == null}">
                 <div class="container d-flex align-items-start justify-content-between">
-                    <img src="" th:src="${profileImage}" style="width: 100px; height: 100px;" alt="Profile Image"/>
+                    <img src="" th:src="${profileImage}" style="margin: 8px; width: 100px; height: 100px; border-radius: 50%;" alt="Profile Image"/>
                 </div>
                 <h3>사용자명: <span th:text="${user != null ? user.getUsername() : ''}"></span></h3>
                 <h3>Email: <span th:text="${user != null ? user.getEmail() : ''}"></span></h3>
             </div>
             <div class="target-div" th:if="${profileOwnerUid != null}">
                 <div class="container d-flex align-items-start">
-                    <img src="" th:src="${profileImage}" style="width: 100px; height: 100px;" alt="Profile Image"/>
+                    <img src="" th:src="${user.profile}" style="margin: 8px; width: 100px; height: 100px; border-radius: 50%;" alt="Profile Image"/>
                     <h3 class="align-self-center"><span th:text="${user != null ? user.username : ''}"></span></h3>
                 </div>
             </div>
